<resources>
    <string name="app_name">BotonesSonoros</string>
    <string name="edit_message">Ingresa tu nombre</string>
    <string name="button_send">Enviar</string>
    <string name="button_1">A</string>
    <string name="button_2">B</string>
    <string name="button_3">C</string>
    <string name="button_4">D</string>
    <string name="button_5">E</string>
    <string name="button_6">F</string>
</resources>